app/apollo/k8s/customize/apollo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apollo-ingress
spec:
  rules:
  - host: apollo.beta.wiqun.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service-apollo-portal-server
          servicePort: 8070
